--- a/src/main/resources/templates/forms/bookOperations/issue.html
+++ b/src/main/resources/templates/forms/bookOperations/issue.html
@@ -14,20 +14,23 @@
             <div class="page-head w3-show-inline-block">
                 <h1 class="page-header">Выдача книги</h1>
                 <h6 class="head-message row" th:text="${message}"></h6>
+                <h6 class="head-message row" th:if="${message!= null and message!= ''}">
+                    Проверить можно здесь: <a href="/swagger-ui.html" >Swagger 2</a>
+                </h6>
             </div>
+
         </div>
         <form action="#" id="fake"></form>
-        <form class="myform" th:action="@{/register/issue}" th:object="${borrowBookForm}" method="post">
+        <form class="myform" th:action="@{/bookOperations/register}" th:object="${borrowBookForm}" method="post">
             <div class="">
                 <div class="row row-standart1 ">
                     <div class="w3-container w3-cell">
-                        <label class="label">Документ</label>
+                        <label class="label">Книга</label>
                     </div>
                     <div class="w3-container w3-cell">
                         <input type="hidden" th:field="*{bookId}" class="editable-select-value">
-                        <select form="fake" th:field="*{bookId}" name="" class="form_field select-editable w3-select "
-                                th:placeholder="'(необязательно)'">
-                            <option th:each="book : ${bookData}" th:attr="value=${book.getId()}, id=${'book#' + book.getId()}"
+                        <select form="fake" th:field="*{bookId}" name="" class="form_field select-editable w3-select ">
+                            <option th:each="book : ${bookData}" th:attr="value=${book.getId()}, id=${'book_' + book.getId()}"
                                     th:text="${book.getId()} +' - ' + ${book.getTitle()}"></option>
                         </select>
                     </div>
@@ -37,7 +40,7 @@
                 </div>
                 <div class="row row-standart1 ">
                     <div class="w3-container w3-cell">
-                        <label class="label">Отдел</label>
+                        <label class="label">Клиент</label>
                     </div>
                     <div class="w3-container w3-cell">
                         <input type="hidden" th:field="*{clientId}" class="editable-select-value">
@@ -63,4 +66,3 @@
 </script>
 </body>
 </html>
-<!-- w3-btn w3-white w3-border w3-border-blue w3-round-->
