--- a/src/main/resources/templates/forms/bookOperations/issue.html
+++ b/src/main/resources/templates/forms/bookOperations/issue.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header_footer :: head (title='Выдача книг')"/>
+<head th:replace="fragments/header :: head (title='Выдача книг')"/>
 <link href="/css/jquery-editable-select.css" rel="stylesheet">
 <script src="/js/jquery-editable-select.js"></script>
 <script src="/js/editors.js"></script>
