--- a/src/main/resources/templates/forms/clients/edit.html
+++ b/src/main/resources/templates/forms/clients/edit.html
@@ -1,6 +1,6 @@
 <html lang="ru"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header_footer :: head (title='Данные клиента')"/>
+<head th:replace="fragments/header :: head (title='Данные клиента')"/>
 <script src="/js/editors.js"></script>
 <body>
 <div id="layout">
