--- a/src/main/resources/templates/forms/clients/getAll.html
+++ b/src/main/resources/templates/forms/clients/getAll.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header_footer :: head (title='Клиенты')"/>
+<head th:replace="fragments/header :: head (title='Клиенты')"/>
 <body>
 <div id="layout">
     <div id="menu"
