--- a/src/main/resources/templates/forms/clients/create.html
+++ b/src/main/resources/templates/forms/clients/create.html
@@ -1,5 +1,5 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header_footer :: head (title='Добавление книги')"/>
+<head th:replace="fragments/header :: head (title='Добавление книги')"/>
 <body>
 <div id="layout">
     <div id="menu"
