--- a/src/main/resources/templates/forms/books/create.html
+++ b/src/main/resources/templates/forms/books/create.html
@@ -17,7 +17,8 @@
                     <div class="w3-container w3-cell">
                         <input th:field="*{title}"
                                th:placeholder="'Название'"
-                               class="form_field w3-input">
+                               class="form_field w3-input"
+                               maxlength="255">
                     </div>
                     <div class="w3-container w3-cell">
                         <div th:if="${#fields.hasErrors('title')}"
@@ -32,7 +33,8 @@
                     <div class="w3-container w3-cell">
                         <input th:field="*{author}"
                                th:placeholder="'Автор'"
-                               class="form_field w3-input">
+                               class="form_field w3-input"
+                               maxlength="255">
                     </div>
                     <div class="w3-container w3-cell">
                         <div th:if="${#fields.hasErrors('author')}"
@@ -47,7 +49,8 @@
                     <div class="w3-container w3-cell">
                         <input th:field="*{isbn}"
                                th:placeholder="'ISBN'"
-                               class="form_field w3-input">
+                               class="form_field w3-input"
+                               maxlength="13">
                     </div>
                     <div class="w3-container w3-cell">
                         <div th:if="${#fields.hasErrors('isbn')}"
